<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/cargas"
            android:id="@+id/gifImageView"
            android:layout_marginBottom="30dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/gif_description" />

        <Button
            android:id="@+id/Login"
            android:text="@string/Login"
            android:layout_width="200dp"
            android:layout_height="60dp"
            />
        <Button
            android:id="@+id/Register"
            android:text="@string/Register"
            android:layout_marginTop="15dp"
            android:layout_width="200dp"
            android:layout_height="60dp"/>




    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>

